# mujoco-pendulum-control

./: .gitignore  CMakeLists.txt  MUJOCO_LOG.TXT  README.md  changeLog.md  ur5e_sim_tutorial  ur5e_sim_tutorial.cpp
assets/: ur5e.xml  ur5e_rigid_pend.xml  ur5e_sphere.xml
assets/kuka_iiwa_14/: iiwa14.xml
assets/ur5e/: ur5e.xml  ur5e_pend_bob.xml  ur5e_pend_bob_collision.xml  ur5e_rigid_pend.xml  ur5e_sphere.xml
src/: iiwa_quat_FL_underactuated_traj.py  ur5e_FL_Aaron.py  ur5e_FL_Aaron_imp.py  ur5e_FL_point_impulse.py  ur5e_FL_single_point.py  ur5e_QP_Aaron.py  ur5e_QP_collision.py  ur5e_QP_w_limits.py  ur5e_QP_w_limits_imp.py  ur5e_QP_wo_limits.py  ur5e_QP_wo_limits_imp.py  ur5e_cart_traj.py  ur5e_circle_upright.py  ur5e_circular_traj_v2.py  ur5e_quat_FL.py  ur5e_quat_FL_underactuated.py  ur5e_quat_FL_underactuated_1.py  ur5e_quat_FL_underactuated_traj.py  ur5e_quat_QP.py  ur5e_rigid_pend_sim_FL.py  ur5e_rigid_pend_sim_G.py  ur5e_sim_FL.cpp  ur5e_sim_FL.py  ur5e_sim_tutorial.cpp  ur5e_vertical_point.py
